--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Adam Sarhan",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.2.0",
+    "discord.js": "^13.6.0",
     "dotenv": "^14.2.0",
     "reddit-image-fetcher": "^2.0.9",
     "wikijs": "^6.3.2",
     "wikipedia": "^1.1.6"
+  },
+  "engines": {
+    "node": "16.13.1"
   }
 }
